FOM-46: fix error text overlapping with allowed file types text.

--- a/apps/admin/src/core/components/file-upload-box/file-upload-box.component.scss
+++ b/apps/admin/src/core/components/file-upload-box/file-upload-box.component.scss
@@ -30,7 +30,6 @@
 
      .upload-control {
          //z-index: 2 !important;
-       height: 100px;
          ngx-dropzone {
            height: 100px;
              z-index: 3 !important;
